Fix horizontal menu overflow

--- a/src/assets/layout/styles/layout/_topbar.scss
+++ b/src/assets/layout/styles/layout/_topbar.scss
@@ -1,6 +1,6 @@
 .layout-topbar {
     background: $topbarBg;
-    height: 4rem;
+    min-height: 4rem;
     padding: 0 2rem;
     border-bottom: $topbarBottomBorder;
     position: fixed;
