--- a/src/assets/layout/styles/layout/sidebar/_sidebar_horizontal.scss
+++ b/src/assets/layout/styles/layout/sidebar/_sidebar_horizontal.scss
@@ -81,6 +81,7 @@
 
             .layout-menu {
                 display: flex;
+                flex-wrap: wrap;
                 flex-direction: row;
                 align-items: center;
                 height: 100%;
